feat(frontend): add posts grid to user profile